--- a/raytracing/Cargo.toml
+++ b/raytracing/Cargo.toml
@@ -4,7 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-indicatif = "0.17.8"
-nalgebra = "0.31.0"
-rand = "0.8.5"
-rayon = "1.5"
+itertools = "0.14.0"
+
