--- a/raytracing/Cargo.toml
+++ b/raytracing/Cargo.toml
@@ -3,9 +3,12 @@ name = "raytracing"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "raytracer"
+
 [dependencies]
-glam = "0.30.8"
-indicatif = "0.18.0"
+glam = { version = "0.30.8", features = ["rand"] }
+indicatif = { version = "0.18", features = ["rayon"] }
 itertools = "0.14.0"
 rand = "0.9.2"
-
+rayon = "1.11.0"
